--- a/src/profiler/base.styl
+++ b/src/profiler/base.styl
@@ -1,5 +1,5 @@
 /**
-  * Base
+  * Base styling
 */
 *
   margin     0
@@ -39,10 +39,6 @@ html
 
   @media (max-width 550px)
     font-size 13px
-
-
-body
-  color white
 
 h1
 h2
@@ -102,6 +98,7 @@ a:active
   color  white
 
 body
+  color      #ffffff
   overflow-x hidden
   overflow-y auto
   background #343338
