--- a/src/profiler/pen.styl
+++ b/src/profiler/pen.styl
@@ -1,253 +1,198 @@
-.single-pen {
-    border: 5px solid #2F2F31;
-    border-radius: 2px;
-    overflow: hidden;
-    margin: 0 2% 25px 0;
-    position: relative;
-    box-shadow: 2px 2px 3px rgba(0,0,0,0.28)
-}
+/**
+  * Pen component
+  *
+  * Pen and sub piece styling
+*/
 
-.single-pen .stats {
-    background: #2F2F31
-}
+.single-pen
+  border        5px solid #2F2F31
+  border-radius 2px
+  overflow      hidden
+  margin        0 2% 25px 0
+  position      relative
+  box-shadow    2px 2px 3px rgba(0,0,0,0.28)
 
-.single-pen .stats::after {
-    background: -webkit-linear-gradient(left, rgba(47,47,49,0), #2f2f31 80%);
-    background: linear-gradient(to right, rgba(47,47,49,0), #2f2f31 80%)
-}
+  .stats
+    background #2F2F31
 
-.iframe-wrap {
-    position: relative;
-    height: 0;
-    padding-top: 56.25%;
-    overflow: hidden
-}
+    &:after
+      background linear-gradient(to right, rgba(47,47,49,0), #2f2f31 80%)
 
-@media (max-width: 550px) {
-    .iframe-wrap {
-        height:150px;
-        padding-top: 0
-    }
-}
+.iframe-wrap
+  position    relative
+  height      0
+  padding-top 56.25%
+  overflow    hidden
 
-.iframe-wrap iframe {
-    width: 201%;
-    height: 201%;
-    border: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: white;
-    -webkit-transform: scale(0.5);
-    transform: scale(0.5);
-    -webkit-transform-origin: top left;
-    transform-origin: top left;
-    -webkit-transition: opacity 0.4s ease;
-    transition: opacity 0.4s ease;
-    opacity: 0;
-    visibility: hidden
-}
+  @media (max-width 550px)
+    height      150px
+    padding-top 0
 
-.iframe-wrap.loaded iframe,.featured-pen .iframe-wrap iframe {
-    visibility: visible;
-    opacity: 1
-}
-
-.iframe-wrap:hover .meta-overlay {
-    opacity: 1
-}
-
-.iframe-wrap>.meta-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 12px 15px 0 15px;
-    opacity: 0;
-    -webkit-transition: opacity 0.15s ease;
-    transition: opacity 0.15s ease;
-    background: rgba(68,68,68,0.95)
-}
-
-.iframe-wrap>.meta-overlay h2 {
-    font-weight: bold;
-    text-transform: none;
-    letter-spacing: 0;
-    margin: 0 0 5px 0;
-    color: #76daff
-}
-
-.iframe-wrap>.meta-overlay p,.iframe-wrap>.meta-overlay li {
-    color: #F5F5F5;
-    margin: 0 0 5px 0
-}
-
-.iframe-wrap>.meta-overlay a {
-    color: white
-}
-
-.iframe-wrap>.meta-overlay .pen-actions {
-    position: absolute;
-    z-index: 2;
-    bottom: 0;
-    padding-bottom: 10px;
-    left: 0;
-    width: 101%;
-    text-align: center;
-    border-bottom: 3px solid #0ebeff
-}
-
-.no-user-line .meta {
-    padding: 12px 10px 10px
-}
-
-.cover-link {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    border: 0 !important;
-    z-index: 1
-}
-
-.meta-overlay pre {
-    font-family: 'Source Code Pro', Menlo, Consolas, Monaco, monospace;
-    font-size: 0.9em
-}
-
-.pen-description p code {
-    color: #ccc
-}
-
-.meta-overlay code,.comment-text code,.pen-description code {
-    font-family: 'Source Code Pro', Menlo, Consolas, Monaco, monospace;
-    font-size: 0.9em
-}
-
-.meta-overlay p code,.comment-text p code,.pen-description p code {
-    margin: 0 2px
-}
+  iframe
+    width            201%
+    height           201%
+    border           0
+    position         absolute
+    top              0
+    left             0
+    background       white
+    transform        scale(0.5)
+    transform-origin top left
+    transition       opacity 0.4s ease
+    opacity          0
+    visibility       hidden
 
 
-.stats {
-    position: absolute;
-    right: 0;
-    bottom: 4px
-}
+.iframe-wrap
 
-.stats .single-stat,.stats .single-stat.comments {
-    display: inline-block;
-    height: 100%;
-    text-align: center;
-    padding: 0 7px 0 9px;
-    margin-left: -6px;
-    color: #999999
-}
+  iframe
+    visibility visible
+    opacity 1
 
-@media (max-width: 830px) {
-    .stats .single-stat,.stats .single-stat.comments {
-        padding-top:2px
-    }
-}
 
-@media (max-width: 550px) {
-    .stats .single-stat,.stats .single-stat.comments {
-        padding-top:3px
-    }
-}
+  &:hover .meta-overlay
+    opacity 1
 
-.stats .single-stat:last-child,.stats .single-stat.comments:last-child {
-    margin-right: 0
-}
 
-.stats .single-stat svg
-.stats .single-stat.comments svg {
-    fill: #999999
-}
+  & >.meta-overlay
+    position   absolute
+    top        0
+    left       0
+    width      100%
+    height     100%
+    padding    12px 15px 0 15px
+    opacity    0
+    transition opacity 0.15s ease
+    background rgba(68,68,68,0.95)
 
-.stats:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 100%;
-    width: 30px;
-    height: 100%
-}
 
-.stats svg {
-    width: 12px;
-    height: 12px;
-    display: inline-block;
-    position: relative;
-    top: -1px;
-    vertical-align: middle;
-    margin-left: 2px
-}
+    h2
+      font-weight    bold
+      text-transform none
+      letter-spacing 0
+      margin         0 0 5px 0
+      color          #76daff
 
-@media (max-width: 550px) {
-    .stats {
-        line-height:2.3
-    }
-}
+    p
+    li
+      color  #F5F5F5
+      margin 0 0 5px 0
 
-.meta {
-    background: #2F2F31;
-    position: relative;
-    font-size: 0.85em;
-    white-space: nowrap;
-    padding: 8px 10px 4px;
-    box-shadow: 0 0 2px rgba(0,0,0,0.25);
-    z-index: 3
-}
+    a
+      color white
 
-.no-user-line .meta {
-    padding: 12px 10px 10px
-}
+    .pen-actions
+      position       absolute
+      z-index        2
+      bottom         0
+      padding-bottom 10px
+      left           0
+      width          101%
+      text-align     center
+      border-bottom  3px solid #0ebeff
 
-.meta .pen-title {
-    color: #999999;
-    font-size: 1.0rem;
-    margin: 4px 0 12px 0;
-    text-overflow: ellipsis;
-    overflow: hidden
-}
 
-.meta img {
-    vertical-align: middle;
-    position: relative;
-    top: -1px;
-    border: 0;
-    margin: 0 3px 0 0
-}
+.no-user-line .meta
+  padding 12px 10px 10px
 
-.meta a {
-    color: #999;
-    -webkit-transition: 0.2s;
-    transition: 0.2s
-}
+.cover-link
+  position absolute
+  top      0
+  right    0
+  left     0
+  bottom   0
+  border   0 !important
+  z-index  1
 
-.meta a:hover {
-    color: #cccccc !important
-}
+.stats
+  position absolute
+  right    0
+  bottom   4px
 
-.meta .user-and-stats {
-    white-space: nowrap
-}
+  @media (max-width 550px)
+    line-height 2.3
 
-.meta .user {
-    padding: 0 5px 0 0
-}
+  &:after
+    content  ""
+    position absolute
+    top      0
+    right    100%
+    width    30px
+    height   100%
 
-.meta .user .username {
-    display: block;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis
-}
+  svg
+    width          12px
+    height         12px
+    display        inline-block
+    position       relative
+    top            -1px
+    vertical-align middle
+    margin-left    2px
 
-.meta .user .username img {
-    width: 20px;
-    height: 20px
-}
+  .single-stat
+  .single-stat.comments
+    display     inline-block
+    height      100%
+    text-align  center
+    padding     0 7px 0 9px
+    margin-left -6px
+    color       #999999
+
+    @media (max-width 830px)
+      padding-top 2px
+
+    @media (max-width 550px)
+      padding-top 3px
+
+    &:last-child
+      margin-right 0
+
+    svg
+      fill #999999
+
+.meta
+  background  #2F2F31
+  position    relative
+  font-size   0.85em
+  white-space nowrap
+  padding     8px 10px 4px
+  box-shadow  0 0 2px rgba(0,0,0,0.25)
+  z-index     3
+
+  .pen-title
+    color         #999999
+    font-size     1.0rem
+    margin        4px 0 12px 0
+    text-overflow ellipsis
+    overflow      hidden
+
+
+  img
+    vertical-align middle
+    position       relative
+    top            -1px
+    border         0
+    margin         0 3px 0 0
+
+  a
+    color      #999
+    transition 0.2s
+
+    &:hover
+      color #cccccc !important
+
+  .user-and-stats
+    white-space nowrap
+
+  .user
+    padding 0 5px 0 0
+
+    .username
+      display       block
+      white-space   nowrap
+      overflow      hidden
+      text-overflow ellipsis
+
+      img
+        width  20px
+        height 20px
