--- a/src/profiler/base.styl
+++ b/src/profiler/base.styl
@@ -21,6 +21,10 @@ img
   height    auto
 
 @font-face
+  font-family "Lato"
+  src url( http://fonts.gstatic.com/s/lato/v11/MDadn8DQ_3oT6kvnUq_2r_esZW2xOQ-xsNqO47m55DA.woff2)
+
+@font-face
   font-family "Telefon Black"
   src url(https://assets.codepen.io/assets/telefon/black/3f32b1c9-8e26-465e-ae02-ff82a378b670-3-cd99c2d06a9fd53639f9fbd036cf8bc2.woff) format("woff"),url(https://assets.codepen.io/assets/telefon/black/3f32b1c9-8e26-465e-ae02-ff82a378b670-3-a89336f5956fb9c2b4d3425102671df8.woff2) format("woff2")
 
