--- a/src/photocube/dev.pug
+++ b/src/photocube/dev.pug
@@ -19,3 +19,38 @@
         h1 5
       .photo-cube__panel
         h1 6
+    .photo-cube__actions--left
+      label.photo-cube__action(for='6')
+      label.photo-cube__action(for='1')
+      label.photo-cube__action(for='2')
+      label.photo-cube__action(for='3')
+      label.photo-cube__action(for='4')
+      label.photo-cube__action(for='5')
+    .photo-cube__actions--right
+      label.photo-cube__action(for='2')
+      label.photo-cube__action(for='3')
+      label.photo-cube__action(for='4')
+      label.photo-cube__action(for='5')
+      label.photo-cube__action(for='6')
+      label.photo-cube__action(for='1')
+    //- .photo-cube__actions--top
+    //-   label.photo-cube__action(for='2')
+    //-   label.photo-cube__action(for='3')
+    //-   label.photo-cube__action(for='4')
+    //-   label.photo-cube__action(for='5')
+    //-   label.photo-cube__action(for='6')
+    //-   label.photo-cube__action(for='1')
+    //- .photo-cube__actions--bottom
+    //-   label.photo-cube__action(for='2')
+    //-   label.photo-cube__action(for='3')
+    //-   label.photo-cube__action(for='4')
+    //-   label.photo-cube__action(for='5')
+    //-   label.photo-cube__action(for='6')
+    //-   label.photo-cube__action(for='1')
+    .photo-cube__indicators
+      label.photo-cube__indicator(for='1')
+      label.photo-cube__indicator(for='2')
+      label.photo-cube__indicator(for='3')
+      label.photo-cube__indicator(for='4')
+      label.photo-cube__indicator(for='5')
+      label.photo-cube__indicator(for='6')
