Update photocube for accessibility

--- a/src/photocube/dev.pug
+++ b/src/photocube/dev.pug
@@ -13,6 +13,19 @@
       .photo-cube__panel
       .photo-cube__panel
       .photo-cube__panel
+    ul.photo-cube--accessible
+      li
+        img(alt='Close up of cat wearing reading glasses')
+      li
+        img(alt='Pug wrapped in blanket')
+      li
+        img(alt='Cat sticking head through fence railings')
+      li
+        img(alt='Pug outside wrapped in picnic blanket')
+      li
+        img(alt='Kittens playing with pink toy')
+      li
+        img(alt='Cat laying on rug')
     .photo-cube__actions--left
       label.photo-cube__action(for='6')
       label.photo-cube__action(for='1')
